--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/GlobalIndex/GlobalIndexDetailWrap.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/GlobalIndex/GlobalIndexDetailWrap.cshtml
@@ -1475,7 +1475,7 @@
                                 },
                                 boost: {
                                     useGPUTranslations: true,
-                                    seriesThreshold: 1
+                                    //seriesThreshold: 1
                                 },
                             }
                         },
