--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Calculate/EducationFund.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Calculate/EducationFund.cshtml
@@ -3119,7 +3119,7 @@
                         boost: {
                             useGPUTranslations: true,
                             // 使用 GPU 提升效能
-                            seriesThreshold: 1 // 當有 1 個以上系列時啟用 boost
+                            //seriesThreshold: 1 // 當有 1 個以上系列時啟用 boost
                         },
                         chart: {
                             type: 'pie'
@@ -3163,7 +3163,8 @@
                                             e.preventDefault();
                                         }
                                     }
-                                }
+                                },
+                                borderWidth: 0
                             },
                             series: {
                                 turboThreshold: 0 // 停用 turboThreshold，讓 Highcharts 不限制資料點數
@@ -3367,6 +3368,7 @@
                                 stacking: 'normal',
                                 groupPadding: 0.1,
                                 maxPointWidth: 80,
+                                borderWidth: 0,
                                 events: {
                                     legendItemClick: function () {
                                         return false;
