--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundDetail/FundDetailOverseas.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundDetail/FundDetailOverseas.cshtml
@@ -3933,7 +3933,7 @@
                                     boost: {
                                         useGPUTranslations: true,
                                         // 使用 GPU 提升效能
-                                        seriesThreshold: 1 // 當有 1 個以上系列時啟用 boost
+                                        //seriesThreshold: 1 // 當有 1 個以上系列時啟用 boost
                                     },
                                     chart: {
                                         type: "scatter",
@@ -4045,7 +4045,7 @@
                                                     hover: {
                                                         enabled: true,
                                                         fillColor: '#F58220',
-                                                        lineWidth: 4,
+                                                        //lineWidth: 4,
                                                         radius: 10
                                                     }
                                                 }
@@ -4094,19 +4094,6 @@
                                             name: selfData[0].firstBankCode + selfData[0].fundName,
                                             color: '#238C6C',
                                             showInLegend: true,
-                                            marker: {
-                                                symbol: 'circle',
-                                                radius: 8,
-                                                lineWidth: 4,
-                                                lineColor: '#FFFFFF',
-                                                states: {
-                                                    hover: {
-                                                        enabled: true,
-                                                        fillColor: '#F58220',
-                                                        radius: 10
-                                                    }
-                                                }
-                                            },
                                             data: [{
                                                 id: selfData[0].firstBankCode,
                                                 name: selfData[0].firstBankCode + selfData[0].fundName,
