update:　補上預約諮詢＆＆會員資訊列　判斷白名單

--- a/src/Feature/Account/platform/Views/Feature/Wealth/Account/MemberCard/MemberCard.cshtml
+++ b/src/Feature/Account/platform/Views/Feature/Wealth/Account/MemberCard/MemberCard.cshtml
@@ -96,7 +96,7 @@
                                         }
                                     </div>
                                 </div>
-                                if(!member.IsEmployee && !member.IsManager)
+                                if (FcbMemberHelper.BranchCanUseConsult() && !member.IsEmployee && !member.IsManager )
                                 {
                                 <div class="c-member__info">
                                     <div class="c-member__title">
