--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFSearch/EtfSearchIndex.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFSearch/EtfSearchIndex.cshtml
@@ -523,7 +523,7 @@
                     lookup: function (query, done) {
                         // Do Ajax call or lookup locally, when done,
                         // call the callback and pass your results:
-                        query = query.trim();
+                        query = query?.trim();
                         query = query.replace(/[\-\[\]{}()*+?.,\\\^$|#\s]/g, "\\$&");
                         let data = window.ETFSearch.SearchKeyword.List;
                         let result;
