--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/StructuredProduct/StructuredProductSearch.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/StructuredProduct/StructuredProductSearch.cshtml
@@ -425,16 +425,17 @@
                 showNoSuggestionNotice: true,
                 noSuggestionNotice: $('#tmplKeywordNotFound').html(),
                 lookup: function (query, done) {
+                    query = query?.trim();
                     query = query.replace(/[\-\[\]{}()*+?.,\\\^$|#\s]/g, "\\$&");
                     if (query.length == 0) {
-                        result = data.slice(0, 5);
+                        result = data;
                     } else {
                         result = data.filter(function (item) {
                             return new RegExp(query, 'gi').test(item.value);
                         });
                     }
                     done({
-                        suggestions: result.slice(0, 5).sort((a, b) => (a.value > b.value ? 1 : -1))
+                        suggestions: result.sort((a, b) => (a.value > b.value ? 1 : -1)).slice(0, 5)
                     });
                 },
                 onSearchComplete: function (query, suggestions) {
@@ -498,7 +499,7 @@
 
                     if (data != null && data.length != 0) {
                         initFilter(data);
-                        OrderColumn("searchTable", 'ProductDisplayName', 'is-desc', true);
+                        OrderColumn("searchTable", 'ProductDisplayName', 'is-asc', true);
                         initAutocomplete(data);
 
                         var urlParams = new URLSearchParams(window.location.search);
