Update:輸入關鍵字後轉換為產品代碼排序

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundSearch/FundSearch.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundSearch/FundSearch.cshtml
@@ -2069,6 +2069,7 @@
                 showNoSuggestionNotice: true,
                 noSuggestionNotice: $('#tmplKeywordNotFound').html(),
                 lookup: function (query, done) {
+                    query = query?.trim();
                     query = query.replace(/[\-\[\]{}()*+?.,\\\^$|#\s]/g, "\\$&");
                     if (query.length == 0) {
                         result = data.slice(0, 5);
@@ -2076,8 +2077,11 @@
                         result = data.filter(function (item) {
                             return new RegExp(query, 'gi').test(item.value);
                         });
+                        result.sort((a, b) => (a.value > b.value ? 1 : -1))
                     }
-                    done({ suggestions: result.slice(0, 5).sort((a, b) => (a.value > b.value ? 1 : -1)) });
+                    done({
+                            suggestions: result.slice(0, 5)
+                    });
                 },
                 onSearchComplete: function (query, suggestions) {
                     var autocomplete = $(this).autocomplete();
