--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Bond/Bond.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Bond/Bond.cshtml
@@ -820,6 +820,7 @@
                     showNoSuggestionNotice: true,
                     noSuggestionNotice: $('#tmplKeywordNotFound').html(),
                     lookup: function (query, done) {
+                        query = query?.trim();
                         query = query.replace(/[\-\[\]{}()*+?.,\\\^$|#\s]/g, "\\$&");
                         if (query.length == 0) {
                             result = bondList.slice(0, 5).sort((a, b) => {
@@ -834,7 +835,7 @@
                         } else {
                             result = bondList.filter(function (item) {
                                 return new RegExp(query, 'gi').test(item.value);
-                            }).slice(0, 5).sort((a, b) => {
+                            }).sort((a, b) => {
                                 if (a.BondCode < b.BondCode) {
                                     return -1;
                                 } else if (a.BondCode > b.BondCode) {
@@ -845,7 +846,7 @@
                             });
                         }
                         done({
-                            suggestions: result
+                            suggestions: result.slice(0, 5)
                         });
                     },
                     onSearchComplete: function (query, suggestions) {
