--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/SearchBar/SearchBar.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/SearchBar/SearchBar.cshtml
@@ -226,12 +226,21 @@
                     lookup: function (query, done) {
                         // Do Ajax call or lookup locally, when done,
                         // call the callback and pass your results:
+                        query = query?.trim();
                         query = query.replace(/[\-\[\]{}()*+?.,\\\^$|#\s]/g, "\\$&");
-                        let result = SC_DATA.S_SearchKeyword.filter(function (item) {
-                            return query.length == 0 || new RegExp(query, 'gi').test(item.value);
-                        });
+                        let data = SC_DATA.S_SearchKeyword;
+
+                        if (query.length == 0) {
+                            result = data.slice(0, 5);
+                        } else {
+                            result = data.filter(function (item) {
+                                return new RegExp(query, 'gi').test(item.value);
+                            });
+
+                            result.sort((a, b) => (a.value > b.value ? 1 : -1));
+                        }
                         done({
-                            suggestions: result.slice(0, 5).sort((a, b) => (a.value > b.value ? 1 : -1))
+                            suggestions: result.slice(0, 5)
                         });
                     },
                     onSearchComplete: function (query, suggestions) {
