--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/USStock/USStock.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/USStock/USStock.cshtml
@@ -603,6 +603,7 @@
                     showNoSuggestionNotice: true,
                     noSuggestionNotice: $('#tmplKeywordNotFound').html(),
                     lookup: function (query, done) {
+                        query = query?.trim();
                         query = query.replace(/[\-\[\]{}()*+?.,\\\^$|#\s]/g, "\\$&");
                         if (query.length == 0) {
                             result = USStockList.slice(0, 5).sort((a, b) => {
@@ -617,7 +618,7 @@
                         } else {
                             result = USStockList.filter(function (item) {
                                 return new RegExp(query, 'gi').test(item.value);
-                            }).slice(0, 5).sort((a, b) => {
+                            }).sort((a, b) => {
                                 if (a.FirstBankCode < b.FirstBankCode) {
                                     return -1;
                                 } else if (a.FirstBankCode > b.FirstBankCode) {
@@ -628,7 +629,7 @@
                             });
                         }
                         done({
-                            suggestions: result
+                            suggestions: result.slice(0, 5)
                         });
                     },
                     onSearchComplete: function (query, suggestions) {
