--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Bond/Bond.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Bond/Bond.cshtml
@@ -823,15 +823,7 @@
                         query = query?.trim();
                         query = query.replace(/[\-\[\]{}()*+?.,\\\^$|#\s]/g, "\\$&");
                         if (query.length == 0) {
-                            result = bondList.slice(0, 5).sort((a, b) => {
-                                if (a.BondCode < b.BondCode) {
-                                    return -1;
-                                } else if (a.BondCode > b.BondCode) {
-                                    return 1;
-                                }
-                                // a must be equal to b
-                                return 0;
-                            });
+                            result = bondList.slice(0, 5);
                         } else {
                             result = bondList.filter(function (item) {
                                 return new RegExp(query, 'gi').test(item.value);
